# TextEditor

./: .gitignore  CMakeLists.txt  Makefile  editor.c  editor.h  flake.nix  keymaps.c  kilo  kilo.c  main.c  rows.c  rows.h
include/: actions.h  commands.h  editor.h  keymaps.h  rows.h  selection.h
src/: actions.c  commands.c  editor.c  keymaps.c  main.c  rows.c
